--- a/config/locales/devise/devise_custom.en.yml
+++ b/config/locales/devise/devise_custom.en.yml
@@ -1,3 +1,7 @@
 en:
   devise:
+    sign_in: "Sign in"
     sign_out: "Sign out"
+    
+    links:
+      forgotten_password: "Forgot your password?"
