--- a/config/locales/models/vending_machines/en.yml
+++ b/config/locales/models/vending_machines/en.yml
@@ -27,5 +27,6 @@ en:
       success: Vending machine was successfully updated.
     new: New vending machine
     editing: Editing vending machine
-    purchase_price_hint: "What was the original purchase price?"
+    purchase_price_hint: "If it is entered, it must be between 0 and 10'000"
+    serial_number_hint: "Must be unique"
         
