--- a/config/locales/models/vending_machines/en.yml
+++ b/config/locales/models/vending_machines/en.yml
@@ -25,8 +25,11 @@ en:
     update:
       message: Update vending machine
       success: Vending machine was successfully updated.
+    delete:
+      success: Vending machine was successfully deleted.
     new: New vending machine
     editing: Editing vending machine
+    none_to_display: There are no vending machines to display.
     purchase_price_hint: "If it is entered, it must be between 0 and 10'000"
     serial_number_hint: "Must be unique"
         
