fix warning issue with cucumber being required before env.rb
see https://github.com/cucumber/cucumber/issues/249 and http://stackoverflow.com/questions/9866264/warning-cucumber-rails-required-outside-of-env-rb

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
+cucumber tests for contracts
+
 authorization with CanCan
 
-add Contract and Location models
+====================================== MVP
 
 strong parameters (see railscast)
 
